# ml-core

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  appveyor.yml  circle.yml
ci/circle/: build.sh  dependencies.sh  test.sh
cmake/: compilers.cmake  dependencies.cmake
src/lib/: CMakeLists.txt  core.h
src/lib/linalg/: linalg.h  matrix.cpp  matrix.h  multiarray.cpp  multiarray.h
